# smirc

./: CMakeLists.txt  README.md  color_test.c  config.c  config.h  itoa.c  itoa.h  main.c  main.h  random.c  random.h  ssl.c  ssl.h  utils.c  utils.h
irc/: channel.h  client.c  client.h  commands.c  commands.h  irc_client.c  irc_client.h  irc_server.c  irc_server.h  server.c  server.h
mud/: client.c  client.h  main.c  mcp.c  mcp.h  protocols.c  telnet.c  telnet.h
test_progs/: colortest.c  colortest.h  configtest.c  mudtest.c
